<?xml version="1.0"?>
<package format="2">
  <name>franka_easy_handeye</name>
  <version>0.1.0</version>
  <description>Handeye calibration for franka using Easy_handeye package. We do not use moveit but move the robot ourself. We rely on realsense camera and AprilTag for the tag detection</description>

  <maintainer email="g.franzese@tudelf.nl">franzesegiovanni</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>dynamic_reconfigure</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>ros-$ROS_DISTRO-realsense2-camera</build_depend>
  <exec_depend>ros-$ROS_DISTRO-realsense2-camera</exec_depend>
</package>
